# TravisTesting

./: .travis.yml  README.md
src/: CMakeLists.txt  arithmetic.hpp  main.cpp  test.cpp
